--- a/src/components/Table/table.module.css
+++ b/src/components/Table/table.module.css
@@ -7,9 +7,13 @@
   text-align: left;
 }
 
+.tableRow {
+  transition: 0.5s all;
+}
+
 .tableRow:hover,
 .smTableRow:hover {
-  background-color: #f0f0f0;
+  background-color: #f2f2f2;
 }
 
 .tableRow:nth-child(odd),
