--- a/src/components/Spinner/spinner.module.css
+++ b/src/components/Spinner/spinner.module.css
@@ -6,20 +6,30 @@
   align-items: center;
 }
 
-.spinnerIcon {
-  transition: all;
-  animation-name: rt;
-  animation-duration: 2s;
-  animation-iteration-count: infinite;
-  font-size: 40px;
+.loader {
+  width: 50px;
+  aspect-ratio: 1;
+  display: grid;
+  border: 4px solid #0000;
+  border-radius: 50%;
+  border-right-color: #000000;
+  animation: l15 1s infinite linear;
 }
-
-@keyframes rt {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
+.loader::before,
+.loader::after {
+  content: '';
+  grid-area: 1/1;
+  margin: 2px;
+  border: inherit;
+  border-radius: 50%;
+  animation: l15 2s infinite;
+}
+.loader::after {
+  margin: 8px;
+  animation-duration: 3s;
+}
+@keyframes l15 {
+  100% {
+    transform: rotate(1turn);
   }
 }
