--- a/src/components/Table/table.module.css
+++ b/src/components/Table/table.module.css
@@ -34,6 +34,14 @@
   background-color: #dcdcdc;
 }
 
+.cellTriggerButton {
+  border: 0;
+  background-color: transparent;
+  color: blue;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
 .tableContainer {
   box-shadow: 0 0 0.2rem #00000040, 0 0 1rem #0000000d;
   border-radius: 0.6rem;
